--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Colomb_db; integrated security=true"
   },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "lifetime": 60
+  },
   "AllowedHosts": "*"
 }
