Authentication - JWT finished

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Colomb_db; integrated security=true"
   },
   "Jwt": {
-    "Issuer": "HotelListingAPI",
+    "Issuer": "ColombAPI",
     "lifetime": 60
   },
   "AllowedHosts": "*"
