--- a/Colomb.csproj
+++ b/Colomb.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="X.PagedList" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
