--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   // how to connect to our db
   "ConnectionStrings": {
-    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Colomb_db; integrated security=true"
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Colomb_db; integrated security=false"
   },
   "Jwt": {
     "Issuer": "ColombAPI",
